--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Taxi_app">
-        <activity android:name=".AuthActivity"></activity>
+        <activity android:name=".activity.AuthActivity"></activity>
         <activity android:name=".RegistrActivity" />
         <!--
              The API key for Google Maps-based APIs is defined as a string resource.
