--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,6 +45,7 @@ dependencies {
     implementation 'com.google.android.material:material:1.3.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+    implementation 'com.google.android.gms:play-services-location:18.0.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     implementation 'androidx.core:core-ktx:1.3.2'
@@ -55,7 +56,8 @@ dependencies {
 
     //Maps
     implementation 'com.google.android.gms:play-services-maps:17.0.1'
-
+    implementation 'com.google.android.gms:play-services-location:17.0.0'
+    implementation 'com.google.android.gms:play-services-maps:17.0.0'
     //Firebase
     implementation 'com.google.firebase:firebase-auth:20.0.4'
     implementation 'com.google.firebase:firebase-database:19.7.0'
@@ -64,5 +66,8 @@ dependencies {
     //Drawer
     implementation "com.mikepenz:materialdrawer-nav:7.0.0"
     implementation "com.mikepenz:materialdrawer:7.0.0"
+
+    //Cyrcle image
+    implementation 'de.hdodenhof:circleimageview:3.1.0'
 
 }
