--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,6 +2,7 @@ plugins {
     id 'com.android.application'
     id 'kotlin-android'
     id 'com.google.gms.google-services'
+    id 'kotlin-android-extensions'
 }
 
 android {
@@ -70,4 +71,9 @@ dependencies {
     //Cyrcle image
     implementation 'de.hdodenhof:circleimageview:3.1.0'
 
+    //Sliding Up
+    implementation 'com.sothree.slidinguppanel:library:3.3.1'
+
+    //Google Places
+    implementation 'com.google.android.libraries.places:places:2.4.0'
 }
