--- a/app/build.gradle
+++ b/app/build.gradle
@@ -58,6 +58,7 @@ dependencies {
     implementation 'com.google.android.gms:play-services-maps:17.0.1'
     implementation 'com.google.android.gms:play-services-location:18.0.0'
     implementation 'com.google.android.gms:play-services-maps:17.0.1'
+
     //Firebase
     implementation 'com.google.firebase:firebase-auth:20.0.4'
     implementation 'com.google.firebase:firebase-database:19.7.0'
@@ -67,11 +68,11 @@ dependencies {
     implementation "com.mikepenz:materialdrawer-nav:7.0.0"
     implementation "com.mikepenz:materialdrawer:7.0.0"
 
-    //Cyrcle image
+    //Circle image
     implementation 'de.hdodenhof:circleimageview:3.1.0'
 
     //Sliding Up
-    implementation 'com.sothree.slidinguppanel:library:3.3.1'
+    implementation 'com.sothree.slidinguppanel:library:3.4.0'
 
     //Google Places
     implementation 'com.google.android.libraries.places:places:2.4.0'
