--- a/app/build.gradle
+++ b/app/build.gradle
@@ -68,8 +68,9 @@ dependencies {
     implementation "com.mikepenz:materialdrawer-nav:7.0.0"
     implementation "com.mikepenz:materialdrawer:7.0.0"
 
-    //Circle image
+    //Images
     implementation 'de.hdodenhof:circleimageview:3.1.0'
+    implementation 'com.squareup.picasso:picasso:2.71828'
 
     //Sliding Up
     implementation 'com.sothree.slidinguppanel:library:3.4.0'
