--- a/app/build.gradle
+++ b/app/build.gradle
@@ -61,9 +61,9 @@ dependencies {
     implementation 'com.google.android.gms:play-services-maps:17.0.1'
 
     //Firebase
-    implementation 'com.google.firebase:firebase-auth:20.0.4'
-    implementation 'com.google.firebase:firebase-database:19.7.0'
-    implementation 'com.google.firebase:firebase-storage:19.2.2'
+    implementation 'com.google.firebase:firebase-auth:21.0.1'
+    implementation 'com.google.firebase:firebase-database:20.0.0'
+    implementation 'com.google.firebase:firebase-storage:20.0.0'
     implementation platform('com.google.firebase:firebase-bom:27.1.0')
     implementation 'com.google.firebase:firebase-auth'
     implementation 'com.google.android.gms:play-services-auth:19.0.0'
@@ -82,4 +82,7 @@ dependencies {
 
     //Google Places
     implementation 'com.google.android.libraries.places:places:2.4.0'
+
+    implementation 'com.google.android.gms:play-services-wallet:18.1.2'
+
 }
